--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^0.8.1",
-    "ethers": "^5.7.0",
-    "next": "^13.0.0",
+    "@evmts/core": "^0.2.0",
+    "@rainbow-me/rainbowkit": "^1.0.5",
+    "next": "^13.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "wagmi": "~0.11.0"
+    "viem": "^1.2.11",
+    "wagmi": "~1.3.8"
   },
   "devDependencies": {
-    "@types/node": "^17.0.31",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
-    "eslint": "^8.15.0",
-    "eslint-config-next": "^12.1.6",
-    "typescript": "^4.9.4"
+    "@evmts/config": "^0.1.0",
+    "@evmts/ts-plugin": "^0.2.0",
+    "@evmts/webpack-plugin": "^0.2.0",
+    "@openzeppelin/contracts": "^4.9.2",
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.9",
+    "solc": "0.8.20",
+    "typescript": "^5.1.6"
   }
 }
