--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,20 @@
 {
   "compilerOptions": {
+    "plugins": [
+      {
+        "name": "@evmts/ts-plugin",
+        "deployments": [
+          {
+            "name": "WagmiMintExample",
+            "addresses": {
+              "1": "0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2",
+              "420": "0x1df10ec981ac5871240be4a94f250dd238b77901"
+            }
+          }
+        ],
+        "solcVersion": "0.8.20"
+      }
+    ],
     "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
