--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@evmts/core": "^0.2.0",
+    "@evmts/vite-plugin": "^0.2.0",
+    "@nomicfoundation/hardhat-foundry": "^1.0.2",
     "@rainbow-me/rainbowkit": "^1.0.5",
+    "hardhat": "^2.16.1",
     "next": "^13.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^1.2.11",
+    "vite": "^4.4.2",
     "wagmi": "~1.3.8"
   },
   "devDependencies": {
@@ -28,6 +32,7 @@
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
     "solc": "0.8.20",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.33.0"
   }
 }
